--- a/src/catboy.glade
+++ b/src/catboy.glade
@@ -99,6 +99,7 @@
             <property name="tab-width">4</property>
             <property name="auto-indent">True</property>
             <property name="show-right-margin">True</property>
+            <property name="highlight-current-line">True</property>
           </object>
           <packing>
             <property name="left-attach">0</property>
