--- a/src/catboy.glade
+++ b/src/catboy.glade
@@ -5,7 +5,7 @@
   <requires lib="gtksourceview" version="4.0"/>
   <object class="GtkWindow" id="mainwindow">
     <property name="can-focus">False</property>
-    <property name="default-width">750</property>
+    <property name="default-width">825</property>
     <property name="default-height">250</property>
     <child>
       <!-- n-columns=1 n-rows=2 -->
@@ -34,6 +34,7 @@
                 <property name="tab-width">4</property>
                 <property name="auto-indent">True</property>
                 <property name="show-right-margin">True</property>
+                <property name="right-margin-position">79</property>
               </object>
             </child>
           </object>
